--- a/src/style.css
+++ b/src/style.css
@@ -80,10 +80,6 @@ button {
   outline: none;
 }
 
-#greet-input {
-  margin-right: 5px;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
@@ -99,4 +95,11 @@ button {
     color: #ffffff;
     background-color: #0f0f0f98;
   }
+}
+
+.selected {
+    color: blue;
+}
+div.decryption {
+    display: none;
 }
